build/k8s/arangodb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arangodb
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
spec:
  defaultBackend:
    service:
      name: dracon
      port:
        name: server
  rules:
  - host: arangodb.dracon.localhost
